reformatted bylines on article pages

--- a/fu/templates/article.html
+++ b/fu/templates/article.html
@@ -20,8 +20,9 @@
      width="65" height="65" />
 </div>
 <p>{{ article.author.fullname}}</p>
-</div>
 
+</div>
+<div class="clear"></div>
 
 <img src="{% thumbnail article.image 850x30000 %}" width="850" alt="" />
 
@@ -38,7 +39,7 @@
 </div>
 <p>{{ article.author.fullname}}</p>
 </div>
-
+<div class="clear"></div>
 
 {% if article.image %}
 <div class="article-thumb">
