--- a/fu/templates/base.html
+++ b/fu/templates/base.html
@@ -4,6 +4,9 @@
 <style media="screen" type="text/css">
 @import "/site_media/css/site.css" ;
 </style>
+<style media="screen" type="text/css">
+{% block css %}{% endblock %}
+</style>
 <script type="text/javascript" src="/site_media/js/comments.js"></script>
 {% block js %}{% endblock %}
 
