--- a/fu/templates/issue.html
+++ b/fu/templates/issue.html
@@ -5,7 +5,7 @@
 {% block css %}
 h1#masthead { background: url(/site_media/images/banner-{{issue.pub_date}}.jpg) !important;
 }
-
+{% endblock %}
 {% block bodyclass %}issue{% endblock %}
 {% block masthead %}{{ issue.pub_date }}{% endblock %}
 {% block content %}
