--- a/fu/templates/issue.html
+++ b/fu/templates/issue.html
@@ -17,7 +17,7 @@ h1#masthead { background: url(/site_media/images/banner-{{issue.pub_date}}.jpg) 
 
 {% if main_article.image %}
 <div class="article-thumb"><img src="{% thumbnail main_article.image 400x500 crop %}" width="400" height="500" alt="" />{% if main_article.source %}
-<div class="image-source">{{ article.source }}</div>
+<div class="image-source">{{ main_article.source }}</div>
 {% endif %}
 </div>
 {% endif %}
@@ -43,6 +43,7 @@ h1#masthead { background: url(/site_media/images/banner-{{issue.pub_date}}.jpg) 
 {% for tag in main_article.tags.all %}
 
 <a href="{{ tag.get_absolute_url }}">{{ tag.name }}</a>
+{% if not forloop.last %} / {% endif %}
 
 {% endfor %}
 </div>
@@ -144,11 +145,12 @@ width="65" height="65" border="0" /></a>
 {% endfor %}
 
 <h3>Tag cloud</h3>
-
+<div id="tag-cloud">
 {% for tag in tag_cloud %}
 <a href="{{ tag.get_absolute_url }}">{{ tag.name }}</a>
+{% if not forloop.last %} / {% endif %}
 {% endfor %}
-
+</div>
 
 <div id="clear"></div>
 </div>
