--- a/media/css/site.css
+++ b/media/css/site.css
@@ -301,3 +301,7 @@ font-size: 90%;}
 
 .comment { padding-top: 20px; border-bottom: #000 solid 1px;}
 .comment-byline { background-color: #eee; width: 100%;}
+
+#tag-cloud { font-size: .8em;}
+
+.image-source {font-size: .6em;}
