--- a/fu/templates/article.html
+++ b/fu/templates/article.html
@@ -30,10 +30,11 @@ h1#masthead { background: url(/site_media/images/banner-{{article.issue.pub_date
 
 <img src="{% thumbnail article.image 850x30000 %}" width="850" alt="" />
 
-
+<div class="blurb">
 {% if article.content %}
 {{ article.content|markdown }}
 {% endif %}
+</div>
 
 {% else %}
 <div id="faux">
