--- a/fu/templates/base.html
+++ b/fu/templates/base.html
@@ -5,6 +5,9 @@
 @import "/site_media/css/site.css" ;
 </style>
 <style media="screen" type="text/css">
+@import "/banner.css/";
+</style>
+
 {% block css %}{% endblock %}
 </style>
 <script type="text/javascript" src="/site_media/js/comments.js"></script>
