--- a/fu/templates/issue.html
+++ b/fu/templates/issue.html
@@ -3,8 +3,10 @@
 {% load thumbnail %}
 {% block title %}{{ issue.pub_date }}{% endblock %}
 {% block css %}
-h1#masthead { background: url(/site_media/images/banner-{{issue.pub_date}}.jpg) !important;
+<style type="text/css">
+h1#masthead { background: url({% thumbnail issue.banner 900x129 crop %}) !important;
 }
+</style>
 {% endblock %}
 {% block bodyclass %}issue{% endblock %}
 {% block masthead %}{{ issue.pub_date }}{% endblock %}
