publish issue now works

--- a/fu/templates/admin_issue.html
+++ b/fu/templates/admin_issue.html
@@ -4,7 +4,7 @@
 {% block title %}admin index{% endblock %}
 {% block content %}
 
-<form action="" method="post" enctype="multipart/form-encode">
+<form action="publish/" method="post" enctype="multipart/form-encode">
 <table width="100%">
 <tr><th colspan="2">Issue {{ issue.number }}: {{ issue.name }}, {{ issue.pub_date }}</th></tr>
 <tr><td colspan="2">
