--- a/fu/templates/article.html
+++ b/fu/templates/article.html
@@ -156,7 +156,8 @@ remember info?
 
 <h2 class="sidebar-main">In This Issue</h2>
 
-{% for article in article.issue.non_main_articles %}
+{% if article.issue.articles %}<h3>Articles:</h3>
+{% for article in article.issue.articles %}
 
 <div class="article">
 <div class="article-thumb">
@@ -171,9 +172,62 @@ width="65" height="65" border="0" /></a>
 <p>{{ article.author.fullname }}</p>
 <div class="clear"></div>
 </div>
+{% endfor %}{% endif %}
 
+{% if article.issue.editorials %}<h3>Editorials:</h3>
+{% for article in article.issue.editorials %}
 
-{% endfor %}
+<div class="article">
+<div class="article-thumb">
+{% thumbnail article.author.headshot 65x65 crop,bw,upscale as bwheadshot %}
+{% thumbnail article.author.headshot 65x65 crop,upscale as colorheadshot %}
+<a href="{{ article.get_absolute_url }}"><img src="{{ bwheadshot }}" 
+onmouseover="this.src = '{{colorheadshot}}'" 
+onmouseout="this.src = '{{ bwheadshot }}'"
+width="65" height="65" border="0" /></a>
+</div>
+<h2><a href="{{ article.get_absolute_url }}">{{ article.headline }}</a></h2>
+<p>{{ article.author.fullname }}</p>
+<div class="clear"></div>
+</div>
+{% endfor %}{% endif %}
+
+{% if article.issue.cartoons %}<h3>Cartoons:</h3>
+{% for article in article.issue.cartoons %}
+
+<div class="article">
+<div class="article-thumb">
+{% thumbnail article.author.headshot 65x65 crop,bw,upscale as bwheadshot %}
+{% thumbnail article.author.headshot 65x65 crop,upscale as colorheadshot %}
+<a href="{{ article.get_absolute_url }}"><img src="{{ bwheadshot }}" 
+onmouseover="this.src = '{{colorheadshot}}'" 
+onmouseout="this.src = '{{ bwheadshot }}'"
+width="65" height="65" border="0" /></a>
+</div>
+<h2><a href="{{ article.get_absolute_url }}">{{ article.headline }}</a></h2>
+<p>{{ article.author.fullname }}</p>
+<div class="clear"></div>
+</div>
+{% endfor %}{% endif %}
+
+{% if article.issue.photos %}<h3>Photography:</h3>
+{% for article in article.issue.photos %}
+
+<div class="article">
+<div class="article-thumb">
+{% thumbnail article.author.headshot 65x65 crop,bw,upscale as bwheadshot %}
+{% thumbnail article.author.headshot 65x65 crop,upscale as colorheadshot %}
+<a href="{{ article.get_absolute_url }}"><img src="{{ bwheadshot }}" 
+onmouseover="this.src = '{{colorheadshot}}'" 
+onmouseout="this.src = '{{ bwheadshot }}'"
+width="65" height="65" border="0" /></a>
+</div>
+<h2><a href="{{ article.get_absolute_url }}">{{ article.headline }}</a></h2>
+<p>{{ article.author.fullname }}</p>
+<div class="clear"></div>
+</div>
+{% endfor %}{% endif %}
+
 
 <h3>Tag cloud</h3>
 <div id="tag-cloud">
