basic image uploading support

--- a/fu/templates/admin_base.html
+++ b/fu/templates/admin_base.html
@@ -20,6 +20,7 @@
 <li><a href="/fuadmin/">Issues</a></li>
 <li><a href="/admin/fu/author/">Authors</a></li> 
 <li><a href="/admin/fu/comment/">Comments</a></li> 
+<li><a href="/fuadmin/image/">Images</a></li>
 <li><a href="/admin/flatpages/flatpage/">Flatpages</a></li>
 </ul>
 
