some form css tweaks

--- a/fu/templates/admin_issue.html
+++ b/fu/templates/admin_issue.html
@@ -29,9 +29,16 @@
 <h2>articles</h2>
 <form action="edit_tags/" method="post">
 <table width="100%">
-<tr><th>article</th><th>author</th><th>tags</th></tr>
+<tr><th></th><th>article</th><th>author</th><th>tags</th></tr>
 {% for article in issue.article_set.all %}
-<tr class="{% cycle 'even' 'odd'  %}"><td><a href="/admin/fu/article/{{article.id}}/">{{ article.headline }}</a></td>
+<tr class="{% cycle 'even' 'odd'  %}">
+<td><span class="atype">
+{% ifequal article.atype "article" %}A{% endifequal %}
+{% ifequal article.atype "editorial" %}E{% endifequal %}
+{% ifequal article.atype "photos" %}P{% endifequal %}
+{% ifequal article.atype "cartoon" %}C{% endifequal %}</span>
+</td>
+<td><a href="/admin/fu/article/{{article.id}}/">{{ article.headline }}</a></td>
 <td><nobr><a href="/admin/fu/author/{{ article.author.id}}/">{{ article.author }}</a></nobr></td>
 <td><input type="text" style="width: 100%" name="tags-{{article.id}}" value="{{ article.tags_string }}" /></td>
 </tr>
