--- a/fu/templates/archives.html
+++ b/fu/templates/archives.html
@@ -14,7 +14,7 @@
 <div id="archives">
 {% for issue in issues %}
 <div class="archive-issue">
-<h3><a href="{{issue.get_absolute_url}}">Issue {{ issue.number }}: {{ issue.name }}</a></h3>
+<h3><nobr><a href="{{issue.get_absolute_url}}">Issue {{ issue.number }}: {{ issue.name }}</a></nobr></h3>
 
 <a href="{{issue.get_absolute_url}}" class="img"><img border="0" src="{% thumbnail issue.main_article.image 100x100 crop %}"
 					  width="100" height="100" class="archive-thumb"
