--- a/fu/templates/admin_issue.html
+++ b/fu/templates/admin_issue.html
@@ -38,7 +38,7 @@
 <tr class="draggable" id="article-{{article.id}}">
 <td><span class="atype">
 {% ifequal article.atype "article" %}A{% endifequal %}
-{% ifequal article.atype "editorial" %}E{% endifequal %}
+{% ifequal article.atype "video" %}V{% endifequal %}
 {% ifequal article.atype "photos" %}P{% endifequal %}
 {% ifequal article.atype "cartoon" %}C{% endifequal %}</span>
 </td>
