--- a/fu/templates/article.html
+++ b/fu/templates/article.html
@@ -174,8 +174,8 @@ width="65" height="65" border="0" /></a>
 </div>
 {% endfor %}{% endif %}
 
-{% if article.issue.editorials %}<h3>Editorials:</h3>
-{% for article in article.issue.editorials %}
+{% if article.issue.videos %}<h3>Videos:</h3>
+{% for article in article.issue.videos %}
 
 <div class="article">
 <div class="article-thumb">
