removed tag cloud and added copyright notice at bottom of all pages

--- a/fu/templates/base.html
+++ b/fu/templates/base.html
@@ -35,6 +35,7 @@
 
 {% block content %}{% endblock %}
 
+<div id="copyright">Copyright &copy; 2008 by The-FU.com. All rights reserved</div>
 </div>
 </body>
 </html>
