added article search

--- a/fu/templates/article.html
+++ b/fu/templates/article.html
@@ -153,6 +153,9 @@ remember info?
 
 
 <div id="sidebar">
+<div id="searchform"><form action="/search/"
+			   method="get"><input type="text" name="q" />
+<input type="submit" value="search" /></form></div>
 
 <h2 class="sidebar-main">In This Issue</h2>
 
