--- a/fu/templates/issue.html
+++ b/fu/templates/issue.html
@@ -124,6 +124,9 @@ remember info?
 </div>
 
 <div id="sidebar">
+<div id="searchform"><form action="/search/"
+			   method="get"><input type="text" name="q" />
+<input type="submit" value="search" /></form></div>
 
 <h2 class="sidebar-main">In This Issue</h2>
 
